--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=MonteCarlo&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+    integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Portfolio-2 || Rukaiya</title>
 </head>
 
