--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Karla:ital,wght@0,200..800;1,200..800&family=MonteCarlo&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Karla:ital,wght@0,200..800;1,200..800&family=MonteCarlo&family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
   <title>Portfolio-2 || Rukaiya</title>
 </head>
 
